# matrice

./: README.md  matrice.py  pyproject.toml  setup.py  solveur.py  tdl.txt  tests.py
matrice/: __init__.py  __main__.py  matrice.py  solveur.py
matrice.egg-info/: PKG-INFO  SOURCES.txt
matrice_antoine.egg-info/: PKG-INFO  SOURCES.txt
